Fix code smells
Signed-off-by: lisrte <laurent.issertial_externe@rte-france.com>